--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>RUN BUDDY</h1>
     What We Do, We 🏃
- 
+    What We Do What You Do Your Trainers Reach Out
     <section1>
         <ul>
             <li>list item 1</li>
