layout and comments formatted

--- a/index.html
+++ b/index.html
@@ -10,30 +10,49 @@
     <title>Run Buddy</title>
 </head>
 <body>
-    <h1>RUN BUDDY</h1>
-    What We Do, We 🏃
-    What We Do What You Do Your Trainers Reach Out
-    <section1>
-        <ul>
-            <li>list item 1</li>
-            <li>list item 2</li>
+    <!--Navigation-->
+    <header>
+        <h1>RUN BUDDY - header</h1>
+      </header>
 
-        </ul>
-        <ol>
-            <li>numbered item</li>
-            <li>numbered item</li>
-        </ol>
-    <div1>
-        <div2></div2>
-        <div3></div3>
-    </div1>
-</section1>
-<section2>
-    <div1>   
-        <img alt= "Photo description" width= auto src="favicon-32x32.png"/>
-    </div1>
-</section2>
+    <!--hero/jumbotron-->
+    <Section>
+    </Section>
+
+    <!--"What we do" section-->
+    <Section>
+        <h2>What We Do, We 🏃</h2>
+    </Section>
+
+    <!--"What you do" section-->
+    <section1>
+        <h2>What you do</h2>
+    </section1>
+    
+    <!--"Meet the trainers" section-->
+    <section>
+        <h2>Meet The Trainers</h2>
+    </section>
+
+    <!--"reach out" section-->
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+    
+    <section2>
+        Start section 2<br>
+        <div1>
+            Div1<br>   
+            <img alt= "Photo description" width= auto src="favicon-32x32.png"/>
+        </div1>
+        End section 2<br>
+    </section2>
+
 <br>
 <a href="">Privacy Policy</a>
+<!--footer-->
+<footer>
+    <h2>❤️ Made with love by Run Buddy.</h2>
+</footer>
 </body>
 </html>
