--- a/index.html
+++ b/index.html
@@ -12,7 +12,27 @@
 <body>
     <!--Navigation-->
     <header>
-        <h1>RUN BUDDY - header</h1>
+        <h1>
+            <a href="/">RUN BUDDY - header</a></h1>
+        <nav>
+            <!-- Unordered list element -->
+            <ul>
+                <!-- List item element-->
+                <li>
+                    <!-- Anchor element -->
+                    <a href="#what-we-do">What We Do</a>
+                </li>
+                <li>
+                    <a href="#what-you-do">What You Do</a>
+                </li>
+                <li>
+                    <a href="#your-trainers">Your Trainers</a>
+                </li>
+                <li>
+                    <a href="#reach-out">Reach Out</a>
+                </li>
+            </ul>
+        </nav>
       </header>
 
     <!--hero/jumbotron-->
