--- a/index.html
+++ b/index.html
@@ -70,11 +70,15 @@
         <h2>Reach Out</h2>
     </section>
 
-<br>
-<a href="">Privacy Policy</a>
+<br/>
+
 <!--footer-->
 <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
+    <div>
+        <a href="#">Read Our Privacy Policy</a><br />
+        &copy; 2019 Run Buddy, Inc.
+      </div>
 </footer>
 </body>
 </html>
