--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
     <!--hero/jumbotron-->
     <Section>
-        <div>
+        <section class="hero">
+        <div class="hero-form">
             <h3>Get Started Today!</h3>
             <p>Fill out this form and one of our trainers will schedule a consult.</p>
             <form>
